@@ -1,24 +1,37 @@
+plugins {
+ id 'java'
+ id 'application'
+ id 'eclipse'
+ id 'org.openjfx.javafxplugin' version '0.0.9'
+ id 'org.owasp.dependencycheck' version '6.1.1'
+ id 'com.github.ben-manes.versions' version '0.36.0'
+}
+
 group 'com.github.shaigem'
 version '0.1'
 
-apply plugin: 'java'
-apply plugin: 'application'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 
-sourceCompatibility = 1.8
+mainClassName = "com.github.shaigem.linkgem.LinkGemApplicationUberJarStarterMain"
 
+task uberJar(type: Jar) {
+    archiveClassifier = 'uber'
 
-mainClassName = "com.github.shaigem.linkgem.LinkGemApplication"
-
-jar {
     manifest {
-        attributes ("Main-Class": "$mainClassName",
-                "SplashScreen-Image": "images/splash.gif")
+        attributes (
+        	"Main-Class": "$mainClassName",
+            "SplashScreen-Image": "images/splash.gif"
+        )
 
     }
 
+    from sourceSets.main.output
+
+    dependsOn configurations.runtimeClasspath
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
     }
 }
 
@@ -27,25 +40,59 @@ repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "16-ea+7"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web']
+}
+
+
+
+
+//org.gradle.jvmargs="--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls"
+//jvmargs="--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls"
+
+application {
+    //applicationDefaultJvmArgs = ['-Xmx512m', '-XX:MaxPermSize=512m', '-Dinm.testmode=true', '-Dfile.encoding=UTF-8', '-Xdebug','-Xrunjdwp:transport=dt_socket,server=y,address=7979,suspend=n']
+    applicationDefaultJvmArgs =  [
+//		"--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",    	
+//        "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
+//        "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
+//        "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+//        "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+//        "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+//        "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
+//        "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
+//        "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
+//        "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+        "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
+        "--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED",
+        "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+        "-Dfile.encoding=UTF-8"
+    ]
+    
+}
+
 ext {
     afterburnerFxVersion = '1.7.0'
-    eventStudioVersion = '1.0.5'
-    controlsFxVersion = '8.40.12'
+    eventStudioVersion = '1.0.6'
+    controlsFxVersion = '11.0.3'
     fontAwesomeFxVersion = '8.9'
-    caffeineVersion = '2.3.5'
+    caffeineVersion = '2.8.2'
     image4jVersion = '0.7'
-    gsonVersion = '2.8.0'
+    gsonVersion = '2.8.6'
+    javaxAnnotationVersion = '1.3.2'
 }
 
 dependencies {
-    compile group: 'com.airhacks', name: 'afterburner.fx', version: afterburnerFxVersion
-    compile group: 'org.sejda', name: 'eventstudio', version: eventStudioVersion
-    compile group: 'org.controlsfx', name: 'controlsfx', version: controlsFxVersion
-    compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: caffeineVersion
-    compile group: 'de.jensd', name: 'fontawesomefx', version: fontAwesomeFxVersion
-    compile group: 'org.jclarion', name: 'image4j', version: image4jVersion
-    compile group: 'com.google.code.gson', name: 'gson', version: gsonVersion
-    //  compile 'org.slf4j:slf4j-api:1.7.21'
-    //compile 'ch.qos.logback:logback-classic:1.1.7'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    implementation group: 'com.airhacks', name: 'afterburner.fx', version: afterburnerFxVersion
+    implementation group: 'org.sejda', name: 'eventstudio', version: eventStudioVersion
+    implementation group: 'org.controlsfx', name: 'controlsfx', version: controlsFxVersion
+    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: caffeineVersion
+    implementation group: 'de.jensd', name: 'fontawesomefx', version: fontAwesomeFxVersion
+    implementation group: 'org.jclarion', name: 'image4j', version: image4jVersion
+    implementation group: 'com.google.code.gson', name: 'gson', version: gsonVersion
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: javaxAnnotationVersion
+    //  implementation 'org.slf4j:slf4j-api:1.7.21'
+    //implementation 'ch.qos.logback:logback-classic:1.1.7'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
